--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "emoji-picker-react": "^4.12.0",
     "firebase": "^11.1.0",
     "next": "15.1.2",
     "react": "^19.0.0",
