update mainpage ui

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@google/generative-ai": "^0.21.0",
     "emoji-picker-react": "^4.12.0",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.1.0",
+    "lucide-react": "^0.475.0",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
