--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "axios": "^1.7.9",
     "emoji-picker-react": "^4.12.0",
     "firebase": "^11.3.0",
+    "lucide-react": "^0.475.0",
     "next": "15.1.2",
+    "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
